# mcp-workday

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
deployment/: deployment.yaml  route.yaml  service.yaml
src/: workday.py
src/mcp_workday/: __main__.py  users.py  workday.py  workday_users.json
